<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:titleTextColor="@color/white"
        android:title="@string/register"
        android:titleTextColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <ImageView
        android:layout_marginTop="120dp"
        android:id="@+id/logoApp"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:transitionName="logoTransition"
        android:layout_marginHorizontal="64dp"
        android:src="@drawable/lg_app_sm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo_aplikasi" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_marginVertical="12dp"
        android:layout_marginHorizontal="64dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/urbanist_bold"
        android:textColor="@color/blue_dark"
        android:text="@string/intro_register"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoApp" />

    <EditText
        android:id="@+id/ed_register_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:background="@drawable/bg_edittext"
        android:ems="10"
        android:fontFamily="@font/urbanist_medium"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:textColor="@color/blue_dark"
        android:textColorHint="@color/blue_dark"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        />

    <academy.bangkit.storyapp.customview.EmailEditText
        android:id="@+id/ed_register_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:background="@drawable/bg_edittext"
        android:ems="10"
        android:fontFamily="@font/urbanist_medium"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:textColor="@color/blue_dark"
        android:textColorHint="@color/blue_dark"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_name"
        />

    <academy.bangkit.storyapp.customview.PasswordEditText
        android:id="@+id/ed_register_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:textSize="20sp"
        android:background="@drawable/bg_edittext"
        android:fontFamily="@font/urbanist_medium"
        android:paddingVertical="12dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/blue_dark"
        android:textColorHint="@color/blue_dark"
        android:paddingHorizontal="16dp"
        android:layout_marginHorizontal="64dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_email" />


    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="20sp"
        android:backgroundTint="@color/blue_dark"
        android:background="@drawable/bg_edittext"
        android:fontFamily="@font/urbanist_medium"
        android:paddingVertical="8dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:paddingHorizontal="16dp"
        android:layout_marginHorizontal="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_password" />

    <View
        android:id="@+id/horizontalLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="64dp"
        android:background="@color/blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonRegister"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opsi_login"
        android:textColor="@color/blue_dark"
        android:textSize="16sp"
        android:fontFamily="@font/urbanist_regular"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="@id/horizontalLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"/>


</androidx.constraintlayout.widget.ConstraintLayout>