<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="12dp"
    android:layout_marginVertical="8dp"
    card_view:cardCornerRadius="8dp">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_item_photo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/gambar_item"
        tools:src="@tools:sample/avatars"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/tv_item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/item_name"
        android:textSize="16sp"
        android:fontFamily="@font/urbanist_bold"
        android:textColor="@android:color/black"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@id/iv_item_photo"
        card_view:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"

        />
    <TextView
        android:id="@+id/tv_detail_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/item_description"
        android:textSize="14sp"
        android:fontFamily="@font/urbanist_medium"
        android:textColor="@android:color/darker_gray"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@id/tv_item_name"
        card_view:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>