<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <ImageView
        android:id="@+id/logoApp"
        android:layout_width="0dp"
        android:layout_marginBottom="48dp"
        android:layout_height="300dp"
        android:layout_marginHorizontal="64dp"
        android:contentDescription="@string/logo_aplikasi"
        android:src="@drawable/lg_app_sm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginVertical="12dp"
        android:textAlignment="center"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/intro"
        android:textColor="@color/blue_dark"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/logoApp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoApp">

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginHorizontal="64dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/bg_edittext"
            android:backgroundTint="@color/blue_dark"
            android:fontFamily="@font/urbanist_medium"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginHorizontal="64dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_edittext"
            android:backgroundTint="@color/blue_dark"
            android:fontFamily="@font/urbanist_medium"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>